--- a/index.html
+++ b/index.html
@@ -13,67 +13,43 @@
 
   <main>
     
+    <section>
+
+      <div class="container">
+
+        <div class="flex items-center justify-center min-h-screen px-5 lg:px-0">
+
+          <div class="grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+
+            <div class="bg-darkBlue rounded-2xl md:h-[25.5rem]">
+              <div class="flex items-center bg-Blue rounded-2xl px-[1.625rem] h-[8.4375rem] lg:block lg:h-[22.5rem]">
+                <img src="images/image-jeremy.png" alt="image-jeremy" class="w-[5.625rem] h-[5.625rem] rounded-full mr-4 border-4 border-paleBlue">
+                <div class="block">
+                  <p class="text-lg text-paleBlue mb-1 font-rubik font-normal">Report for</p>
+                  <p class="text-2xl lg:text-4xl text-white font-rubik font-medium">Jeremy Robson</p>
+                </div>
+              </div>
+              <div class="flex items-center pl-8 space-x-6 h-[4.38rem] lg:h-[10.125rem] lg:block lg:space-y-6">
+                <p>Daily</p>
+                <p>Weekly</p>
+                <p>Monthly</p>
+              </div>
+              
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
-  Report for
-  Jeremy Robson
-
-  Daily
-  Weekly
-  Monthly
-
-  Work
-  5hrs <!-- daily -->
-  Previous - 7hrs <!-- daily -->
-  32hrs <!-- weekly -->
-  Previous - 36hrs <!-- weekly -->
-  103hrs <!-- monthly -->
-  Previous - 128hrs <!-- monthly -->
-
-  Play
-  1hr <!-- daily -->
-  Previous - 2hrs <!-- daily -->
-  10hrs <!-- weekly -->
-  Previous - 8hrs <!-- weekly -->
-  23hrs <!-- monthly -->
-  Previous - 29hrs <!-- monthly -->
-
-  Study
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 7hrs <!-- weekly -->
-  13hrs <!-- monthly -->
-  Previous - 19hrs <!-- monthly -->
-
-  Exercise
-  1hr <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 5hrs <!-- weekly -->
-  11hrs <!-- monthly -->
-  Previous - 18hrs <!-- monthly -->
-
-  Social
-  1hr <!-- daily -->
-  Previous - 3hrs <!-- daily -->
-  5hrs <!-- weekly -->
-  Previous - 10hrs <!-- weekly -->
-  21hrs <!-- monthly -->
-  Previous - 23hrs <!-- monthly -->
-
-  Self Care
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  2hrs <!-- weekly -->
-  Previous - 2hrs <!-- weekly -->
-  7hrs <!-- monthly -->
-  Previous - 11hrs <!-- monthly -->
 
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <!-- <footer>
+    <div class="">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Headbwoi</a>.
+    </div>
+  </footer> -->
 </body>
 </html>
