--- a/index.html
+++ b/index.html
@@ -17,28 +17,62 @@
 
       <div class="container">
 
-        <div class="flex items-center justify-center min-h-screen px-5 lg:px-0">
+        <div class="flex items-center justify-center flex-col lg:flex-row min-h-screen px-5 pt-20 pb-6 lg:py-0 lg:px-0">
 
-          <div class="grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
-
-            <div class="bg-darkBlue rounded-2xl md:h-[25.5rem]">
-              <div class="flex items-center bg-Blue rounded-2xl px-[1.625rem] h-[8.4375rem] lg:block lg:h-[22.5rem]">
-                <img src="images/image-jeremy.png" alt="image-jeremy" class="w-[5.625rem] h-[5.625rem] rounded-full mr-4 border-4 border-paleBlue">
+          
+            <!-- col -1 -->
+            <div class="bg-darkBlue rounded-2xl w-[20.625rem] lg:w-[16.125rem] mb-6 lg:mb-0 lg:mr-7 ">
+              <div class="flex items-center bg-Blue rounded-2xl px-[1.625rem] h-[8.4375rem] lg:h-[22.1875rem] lg:block lg:pt-8">
+                <img src="images/image-jeremy.png" alt="image-jeremy" class="w-[5.625rem] h-[5.625rem] rounded-full mr-4 border-4 border-paleBlue lg:mb-10">
                 <div class="block">
                   <p class="text-lg text-paleBlue mb-1 font-rubik font-normal">Report for</p>
-                  <p class="text-2xl lg:text-4xl text-white font-rubik font-medium">Jeremy Robson</p>
+                  <p class="text-2xl lg:text-5xl text-white font-rubik font-medium">Jeremy Robson</p>
                 </div>
               </div>
-              <div class="flex items-center pl-8 space-x-6 h-[4.38rem] lg:h-[10.125rem] lg:block lg:space-y-6">
-                <p>Daily</p>
-                <p>Weekly</p>
-                <p>Monthly</p>
+              <div class="flex items-center justify-around pl-8 lg:justify-between lg:py-7 h-[4.38rem] lg:h-[10.125rem] lg:flex-col lg:items-start ">
+                <p class="text-lg text-desaturatedBlue hover:text-white">Daily</p>
+                <p class="text-lg text-desaturatedBlue hover:text-white">Weekly</p>
+                <p class="text-lg text-desaturatedBlue hover:text-white">Monthly</p>
               </div>
               
             </div>
 
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 lg:gap-7">
+        <!-- group two containing three col -->
+
+              <!-- col 2
+              work card -->
+              <div class="bg-workBg rounded-2xl h-[10.0625rem] lg:h-[15.3125rem] w-[20.625rem] lg:w-[16.125rem] relative before:absolute before:-top-[0.6rem] before:right-5 before:bg-[url('../images/icon-work.svg')] before:bg-no-repeat before:w-20 before:h-20 before:bg-contain before:z-20 overflow-hidden">
+
+                <div class="bg-darkBlue absolute top-[2.375rem] lg:top-11 w-full h-[7.6875rem] lg:h-[12.5625rem] rounded-2xl py-7 px-6 lg:px-7 z-30">
+
+                  <div class="flex items-center justify-between"></div>
+                </div>
+
+              </div>
+              <!-- col 2 -->
+              <div class="bg-darkBlue rounded-2xl h-[10.0625rem] lg:h-[15.3125rem] w-[20.625rem] lg:w-[16.125rem]">
+
+              </div>
+              <!-- col 2 -->
+              <div class="bg-darkBlue rounded-2xl h-[10.0625rem] lg:h-[15.3125rem] w-[20.625rem] lg:w-[16.125rem]">
+
+              </div>
+              <!-- col 2 -->
+              <div class="bg-darkBlue rounded-2xl h-[10.0625rem] lg:h-[15.3125rem] w-[20.625rem] lg:w-[16.125rem]">
+
+              </div>
+              <!-- col 2 -->
+              <div class="bg-darkBlue rounded-2xl h-[10.0625rem] lg:h-[15.3125rem] w-[20.625rem] lg:w-[16.125rem]">
+
+              </div>
+              <!-- col 2 -->
+              <div class="bg-darkBlue rounded-2xl h-[10.0625rem] lg:h-[15.3125rem] w-[20.625rem] lg:w-[16.125rem]">
+
+              </div>
+            </div>
+
           </div>
-        </div>
       </div>
     </section>
   </main>
