made responsive for tablet

--- a/index.html
+++ b/index.html
@@ -51,24 +51,24 @@
                 class="flex items-center justify-around pl-8 lg:justify-between lg:py-7 h-[4.38rem] lg:h-[10.125rem] lg:flex-col lg:items-start"
               >
                 <p
-                  class="text-lg text-desaturatedBlue hover:text-white cursor-pointer font-rubik font-normal dailyBtn btn"
+                  class="text-lg text-desaturatedBlue hover:text-white cursor-pointer font-rubik font-normal btn" data-name="daily"
                 >
                   Daily
                 </p>
                 <p
-                  class="text-lg text-desaturatedBlue hover:text-white cursor-pointer active font-rubik font-normal weeklyBtn btn"
+                  class="text-lg text-desaturatedBlue hover:text-white cursor-pointer active font-rubik font-normal btn" data-name="weekly"
                 >
                   Weekly
                 </p>
                 <p
-                  class="text-lg text-desaturatedBlue hover:text-white cursor-pointer font-rubik font-normal monthlyBtn btn"
+                  class="text-lg text-desaturatedBlue hover:text-white cursor-pointer font-rubik font-normal btn" data-name="monthly"
                 >
                   Monthly
                 </p>
               </div>
             </div>
 
-            <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 lg:gap-7">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-7">
               <!-- group two containing three col -->
 
               <!-- col 2 row -1
