--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <section>
         <div class="container">
           <div
-            class="flex items-center justify-center flex-col lg:flex-row min-h-screen px-5 pt-20 pb-6 lg:py-0 lg:px-0"
+            class="flex items-center justify-center flex-col lg:flex-row min-h-screen px-5 pt-20 pb-6 lg:py-0 lg:px-0 "
           >
             <!-- col -1 -->
             <!-- dashnoard owner -->
@@ -51,29 +51,29 @@
                 class="flex items-center justify-around pl-8 lg:justify-between lg:py-7 h-[4.38rem] lg:h-[10.125rem] lg:flex-col lg:items-start"
               >
                 <p
-                  class="text-lg text-desaturatedBlue hover:text-white cursor-pointer font-rubik font-normal btn" data-name="daily"
+                  class="text-lg text-desaturatedBlue hover:text-white cursor-pointer font-rubik font-normal btn" data-option="daily"
                 >
                   Daily
                 </p>
                 <p
-                  class="text-lg text-desaturatedBlue hover:text-white cursor-pointer active font-rubik font-normal btn" data-name="weekly"
+                  class="text-lg text-desaturatedBlue hover:text-white cursor-pointer active font-rubik font-normal btn" data-option="weekly"
                 >
                   Weekly
                 </p>
                 <p
-                  class="text-lg text-desaturatedBlue hover:text-white cursor-pointer font-rubik font-normal btn" data-name="monthly"
+                  class="text-lg text-desaturatedBlue hover:text-white cursor-pointer font-rubik font-normal btn" data-option="monthly"
                 >
                   Monthly
                 </p>
               </div>
             </div>
 
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-7">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-7  wrapper">
               <!-- group two containing three col -->
 
               <!-- col 2 row -1
               work card -->
-              <div
+              <!-- <div
                 class="bg-workBg rounded-2xl h-[10.0625rem] lg:h-[15.3125rem] w-[20.625rem] lg:w-[16.125rem] relative before:absolute before:-top-[0.6rem] before:right-5 before:bg-[url('../images/icon-work.svg')] before:bg-no-repeat before:w-20 before:h-20 before:bg-contain before:z-20 overflow-hidden"
               >
                 <div
@@ -106,10 +106,10 @@
                     </p>
                   </div>
                 </div>
-              </div>
+              </div> -->
 
               <!-- col 3 row -1 play card -->
-              <div
+              <!-- <div
                 class="bg-playBg rounded-2xl h-[10.0625rem] lg:h-[15.3125rem] w-[20.625rem] lg:w-[16.125rem] relative before:absolute before:-top-[0.6rem] before:right-5 before:bg-[url('../images/icon-play.svg')] before:bg-no-repeat before:w-20 before:h-20 before:bg-contain before:z-20 overflow-hidden"
               >
                 <div
@@ -142,10 +142,10 @@
                     </p>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <!-- col 4 row-1 study card -->
 
-              <div
+              <!-- <div
                 class="bg-studyBg rounded-2xl h-[10.0625rem] lg:h-[15.3125rem] w-[20.625rem] lg:w-[16.125rem] relative before:absolute before:-top-[0.6rem] before:right-5 before:bg-[url('../images/icon-study.svg')] before:bg-no-repeat before:w-20 before:h-20 before:bg-contain before:z-20 overflow-hidden"
               >
                 <div
@@ -178,10 +178,10 @@
                     </p>
                   </div>
                 </div>
-              </div>
+              </div> -->
 
               <!-- col 1 row -2 exercise -->
-              <div
+              <!-- <div
                 class="bg-exerciseBg rounded-2xl h-[10.0625rem] lg:h-[15.3125rem] w-[20.625rem] lg:w-[16.125rem] relative before:absolute before:-top-[0.6rem] before:right-5 before:bg-[url('../images/icon-exercise.svg')] before:bg-no-repeat before:w-20 before:h-20 before:bg-contain before:z-20 overflow-hidden"
               >
                 <div
@@ -214,9 +214,9 @@
                     </p>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <!-- col 2 row -2 social -->
-              <div
+              <!-- <div
                 class="bg-socialBg rounded-2xl h-[10.0625rem] lg:h-[15.3125rem] w-[20.625rem] lg:w-[16.125rem] relative before:absolute before:-top-[0.6rem] before:right-5 before:bg-[url('../images/icon-social.svg')] before:bg-no-repeat before:w-20 before:h-20 before:bg-contain before:z-20 overflow-hidden"
               >
                 <div
@@ -249,11 +249,11 @@
                     </p>
                   </div>
                 </div>
-              </div>
+              </div> -->
 
               <!-- col 3 row -3 selfcare -->
-              <div
-                class="bg-selfCareBg rounded-2xl h-[10.0625rem] lg:h-[15.3125rem] w-[20.625rem] lg:w-[16.125rem] relative before:absolute before:-top-[0.6rem] before:right-5 before:bg-[url('../images/icon-self-care.svg')] before:bg-no-repeat before:w-20 before:h-20 before:bg-contain before:z-20 overflow-hidden"
+              <!-- <div
+                class="bg-selfcareBg rounded-2xl h-[10.0625rem] lg:h-[15.3125rem] w-[20.625rem] lg:w-[16.125rem] relative before:absolute before:-top-[0.6rem] before:right-5 before:bg-[url('../images/icon-self-care.svg')] before:bg-no-repeat before:w-20 before:h-20 before:bg-contain before:z-20 overflow-hidden"
               >
                 <div
                   class="bg-darkBlue absolute w-full h-[7.6875rem] bottom-0 lg:h-[12.5625rem] rounded-2xl py-7 px-6 lg:px-7 z-30 hover:bg-desaturatedBlue cursor-pointer duration-200"
@@ -285,7 +285,9 @@
                     </p>
                   </div>
                 </div>
-              </div>
+              </div> -->
+
+
             </div>
           </div>
         </div>
